# dbression

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
examples/: README.md
examples/01-hello/: HelloSql.test.md  connection.properties
examples/02-stored-procedure/: BumpCounterTest.test.md  SuiteSetUp.test.md  SuiteTearDown.test.md  _root.wiki
examples/03-schema-drift/: SchemaSnapshotTest.test.md  SuiteSetUp.test.md  SuiteTearDown.test.md  connection.properties
src/dbression/: __init__.py  cli.py  runner.py  symbols.py
src/dbression/db/: __init__.py  connection.py  engine.py  errors.py
src/dbression/fixtures/: __init__.py  base.py  basic.py  inspect_and_store.py  plugins.py  suite_fixtures.py
src/dbression/parser/: __init__.py  ast.py  markdown.py  markdown_writer.py  tokenizer.py  wiki.py
src/dbression/report/: __init__.py  console.py  json_report.py  junit.py  progress.py  render.py
tests/: conftest.py  test_connection.py  test_markdown_parser.py  test_markdown_roundtrip.py  test_parser.py  test_phase2_fixtures.py  test_plugins.py  test_postgres_live.py  test_progress_and_single_file.py  test_render.py  test_report_junit.py  test_smoke.py  test_sqlite_engine.py  test_symbols.py  test_tokenizer.py  test_update_fixture.py
