[project]
name = "dbression"
version = "0.1.2"
description = "Rage-quit your flaky DB regressions — modern, lightweight, multi-DB regression testing."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Jürgen Zornig", email = "info@angrydata.info" }
]
requires-python = ">=3.12"
keywords = [
    "database",
    "testing",
    "regression",
    "dbfit",
    "postgres",
    "oracle",
    "sqlserver",
    "sql",
    "markdown",
    "fitnesse",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: SQL",
    "Topic :: Database",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "oracledb>=4.0.1",
    "psycopg[binary]>=3.3.4",
    "sqlalchemy>=2.0",
    "pymssql>=2.3.13",
    "markdown-it-py>=4.2.0",
]

[project.urls]
Homepage = "https://angrydata.info/dbression"
Repository = "https://github.com/angrydat/dbression"
Issues = "https://github.com/angrydat/dbression/issues"
Changelog = "https://github.com/angrydat/dbression/blob/main/CHANGELOG.md"

[project.scripts]
dbression = "dbression.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
